src/components/modus-wc-autocomplete/modus-wc-autocomplete.scss
/**
* This component uses Tailwind CSS and DaisyUI.
* Only add styles here that should not be applied by Tailwind, Daisy, or the theme.
*/

.modus-wc-autocomplete {
  position: relative;

  .modus-wc-input-label {
    padding-bottom: var(--modus-wc-spacing-2xs);
  }

  .modus-wc-input-bordered {
    border-radius: var(--modus-wc-border-radius-md);
  }

  .modus-wc-autocomplete-multi-select {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 0.5rem;
    padding: var(--modus-wc-spacing-xs);

    &.modus-wc-autocomplete-multi-select--bordered {
      border: var(--modus-wc-border-width-xs) solid var(--modus-wc-color-gray-0);
      border-radius: var(--modus-wc-border-radius-md)
        var(--modus-wc-border-radius-md) 0 0;
    }

    /** TODO - chip styling is temporary, remove once chip component is implemented */
    .chip {
      display: flex;
      align-items: center;
      background-color: var(--modus-wc-color-gray-1);
      border-radius: var(--modus-wc-border-radius-xl);

      button {
        i {
          font-size: 0.75rem;
        }
      }

      .label {
        font-size: var(--modus-wc-font-size-md);
        padding: 0 var(--modus-wc-spacing-xs);
      }
    }
  }

  .modus-wc-menu {
    position: absolute;
    left: 0;
    top: 100%;
    margin-top: 0.625rem; // 10px, not exact but works for all 3 sizes
    z-index: 99;
    border-radius: 0 0 var(--modus-wc-border-radius-md)
      var(--modus-wc-border-radius-md);
  }

  .modus-wc-autocomplete-no-results {
    padding: var(--modus-wc-spacing-md);

    .icon-label {
      display: flex;
      align-items: center;
      justify-content: center;

      i {
        color: var(--modus-wc-color-gray-6);
      }
    }

    .label {
      font-size: var(--modus-wc-font-size-md);
      font-weight: var(--modus-wc-font-weight-bold);
      margin-left: var(--modus-wc-spacing-xs);
    }

    .sub-label {
      font-size: var(--modus-wc-font-size-sm);
      color: var(--modus-wc-color-gray-7);
      text-align: center;
    }
  }
}

[data-theme='modus-classic-light'] .modus-wc-autocomplete,
[data-theme='modus-classic-dark'] .modus-wc-autocomplete {
  .modus-wc-autocomplete-multi-select--bordered {
    border: var(--modus-wc-border-width-xs) solid var(--modus-wc-color-gray-6);

    &:focus-within {
      border-color: var(--modus-wc-color-highlight-blue);
      border-width: var(--modus-wc-border-width-sm);
    }
  }

  ul.modus-wc-menu {
    box-shadow: 0 0 4px 0 rgba(54, 53, 69, 0.3);
  }
}

